implement ARouterDataSource and DxfDataSource